Repair padding/spacing in comment pane of SPV.

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -319,7 +319,7 @@ form.comment {
 }
 
 textarea.comment, form.comment .form-buttons {
-    width: 365px;
+    width: 317px;
 }
 
 #recreate-beginner-rivers {
@@ -549,7 +549,7 @@ textarea#invitations {
         background-color: $faint_tan;
         color: black;
         border-bottom: 0px;
-        margin-left: 0.5em;
+        margin-left: 0.3em;
         cursor: pointer;
     }
 }
