--- a/scss/single-post-view.scss
+++ b/scss/single-post-view.scss
@@ -63,7 +63,7 @@ body.single-post-view .main {
       -moz-box-sizing: border-box;
       box-sizing: border-box;
       width: 45%;
-      padding: 0px 0px 2em 1em;
+      padding: 14px 2em 2em 1em;
       border-radius: 0 3px 3px 0;
       position: relative;
       float: right;
@@ -72,7 +72,7 @@ body.single-post-view .main {
       div.comments {
         overflow-y: auto;
         vertical-align: top;
-        padding-right: 20px;
+        padding-right: 1em;
         min-height: 500px;
 
         form.comment {
